--- a/html/index.html
+++ b/html/index.html
@@ -3,15 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Demeter - Giải pháp toàn diện cho nông nghiệp Việt Nam
-
-</title>
+        <title>Demeter - Giải pháp toàn diện cho nông nghiệp Việt Nam</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="favicon.svg">
         <link rel="icon" type="image/svg+xml" href="favicon.svg">
-        <!-- Place favicon.ico in the root directory -->
+
+        <meta property="og:title" content="Demeter - Giải pháp toàn diện cho nông nghiệp Việt Nam" />
+        <meta property="og:description" content="Demeter - Giải pháp toàn diện cho nông nghiệp Việt Nam" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://demeter.vn" />
+        <meta property="og:image" content="http://demeter.vn/img/logo.png" />
+
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
