--- a/services/app/index.html
+++ b/services/app/index.html
@@ -7,7 +7,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
+        <link rel="apple-touch-icon" href="favicon.svg">
+        <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="semantic/dist/semantic.css">
@@ -25,7 +30,7 @@
             <div class="ui container">
                 <div class="ui text menu">
                     <a href="#/projects" class="item">
-                        <img src="http://home.demeter.dev/img/logo.svg">
+                        <span class="logo"></span>
                     </a>
                     <a href="#/projects" class="browse item">
                         Danh sách dự án
