--- a/services/app/index.html
+++ b/services/app/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Demeter.VN</title>
+        <title>Demeter | App Demo</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 
@@ -15,13 +15,21 @@
 
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="semantic/dist/semantic.css">
+        <link rel="stylesheet" href="semantic/dist/semantic.min.css">
         <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
         <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
         <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body class="login" ng-controller="MainController">
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-65735850-1','auto');ga('send','pageview');
+        </script>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -70,10 +78,8 @@
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="bower_components/angular-breadcrumb/dist/angular-breadcrumb.min.js"></script>
-        <!--<script src="bower_components/Chart.js/Chart.min.js"></script>-->
-        <script src="bower_components/Chart.js/Chart.js"></script>
-        <script src="bower_components/angular-chart.js/angular-chart.js"></script>
-        <!--<script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>-->
+        <script src="bower_components/Chart.js/Chart.min.js"></script>
+        <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 
         <script src="js/vendor/angular-slugify.js"></script>
 
@@ -95,15 +101,5 @@
         <script>
         $('.ui.dropdown').dropdown();
         </script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <!--<script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>-->
     </body>
 </html>
