--- a/services/app/index.html
+++ b/services/app/index.html
@@ -15,11 +15,11 @@
 
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="semantic/dist/semantic.min.css">
+        <link rel="stylesheet" href="semantic/dist/semantic.min.css?v=2">
         <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
         <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
         <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.css?v=2">
     </head>
     <body class="login" ng-controller="MainController">
         <script>
