--- a/services/app/index.html
+++ b/services/app/index.html
@@ -40,7 +40,7 @@
                     <a href="#/projects" class="item">
                         <span class="logo"></span>
                     </a>
-                    <a href="#/projects" class="browse item">
+                    <a href="#/projects" class="ui active teal item">
                         Danh sách dự án
                         <!-- <i class="dropdown icon"></i> -->
                     </a>
