--- a/services/app/index.html
+++ b/services/app/index.html
@@ -79,7 +79,8 @@
         <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="bower_components/angular-breadcrumb/dist/angular-breadcrumb.min.js"></script>
         <script src="bower_components/Chart.js/Chart.min.js"></script>
-        <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
+        <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+        <!--<script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>-->
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
         <script src="js/vendor/angular-slugify.js"></script>
