--- a/services/app/index.html
+++ b/services/app/index.html
@@ -15,11 +15,11 @@
 
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="semantic/dist/semantic.min.css?v=2">
+        <link rel="stylesheet" href="semantic/dist/semantic.min.css?v=3">
         <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
         <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
         <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
-        <link rel="stylesheet" href="css/main.css?v=2">
+        <link rel="stylesheet" href="css/main.css?v=3">
     </head>
     <body class="login" ng-controller="MainController">
         <script>
@@ -99,7 +99,7 @@
         <script src="js/project/projects.controller.js"></script>
         <script src="js/project/project.controller.js"></script>
         <script src="js/project/zone.controller.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/main.js?v=3"></script>
         <script>
         $('.ui.dropdown').dropdown();
         </script>
