--- a/services/app/index.html
+++ b/services/app/index.html
@@ -85,11 +85,13 @@
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
         <script src="bower_components/chartist/dist/chartist.min.js"></script>
         <script src="bower_components/angular-chartist.js/dist/angular-chartist.min.js"></script>
+        <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
 
         <script src="js/vendor/angular-slugify.js"></script>
 
         <script src="js/core/core.module.js"></script>
         <script src="js/core/main.controller.js"></script>
+        <script src="js/core/socket.service.js"></script>
         <script src="js/core/model.service.js"></script>
 
         <script src="js/auth/auth.module.js"></script>
