--- a/html/gioi-thieu.html
+++ b/html/gioi-thieu.html
@@ -168,7 +168,7 @@
             <div class="content">
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mc_embed_signup">
-                <form action="http://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <form action="https://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
                     <h2>Đăng ký dùng thử Demeter!</h2>
                 <div class="mc-field-group">
