fix broken links

--- a/html/index.html
+++ b/html/index.html
@@ -57,13 +57,13 @@
                         <a class="active" href="/">Trang chủ</a>
                     </li>
                     <li>
-                        <a class="" href="ung-dung.php">Ứng dụng</a>
+                        <a class="" href="ung-dung.html">Ứng dụng</a>
                     </li>
                     <!-- <li>
                         <a href="#">Thiết bị</a>
                     </li> -->
                     <li>
-                        <a class="" href="gioi-thieu.php">Giới thiệu</a>
+                        <a class="" href="gioi-thieu.html">Giới thiệu</a>
                     </li>
                 </ul>
                 <ul id="user-menu" class="menu">
@@ -152,7 +152,7 @@
                 <div class="apps img"></div>
                 <h3>Hệ thống phần mềm và ứng dụng quản lý hiệu quả trên nền web, smartphone, máy tính bảng</h3>
 
-                <a href="ung-dung.php" class="btn big cancel read-more">Xem thêm</a>
+                <a href="ung-dung.html" class="btn big cancel read-more">Xem thêm</a>
             </div>
         </div>
 
@@ -241,7 +241,7 @@
                     <div class="right">
                         <div class="newsletter">
                             <p>Cập nhật tin tức từ Demeter</p>
-                            <form action="http://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                            <form action="https://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_77e84717877d59d08043546ff_91476e9b05" tabindex="-1" value=""></div>
                                 <div class="input">
                                     <input type="text" name="EMAIL" placeholder="Nhập địa chỉ email của bạn..">
