--- a/html/ung-dung.html
+++ b/html/ung-dung.html
@@ -57,13 +57,13 @@
                         <a class="" href="/">Trang chủ</a>
                     </li>
                     <li>
-                        <a class="active" href="ung-dung.php">Ứng dụng</a>
+                        <a class="active" href="ung-dung.html">Ứng dụng</a>
                     </li>
                     <!-- <li>
                         <a href="#">Thiết bị</a>
                     </li> -->
                     <li>
-                        <a class="" href="gioi-thieu.php">Giới thiệu</a>
+                        <a class="" href="gioi-thieu.html">Giới thiệu</a>
                     </li>
                 </ul>
                 <ul id="user-menu" class="menu">
@@ -244,7 +244,7 @@
                     <div class="right">
                         <div class="newsletter">
                             <p>Cập nhật tin tức từ Demeter</p>
-                            <form action="shttps://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                            <form action="https://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_77e84717877d59d08043546ff_91476e9b05" tabindex="-1" value=""></div>
                                 <div class="input">
                                     <input type="text" name="EMAIL" placeholder="Nhập địa chỉ email của bạn..">
@@ -273,7 +273,7 @@
             <div class="content">
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mc_embed_signup">
-                <form action="http://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <form action="https://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
                     <h2>Đăng ký dùng thử Demeter!</h2>
                 <div class="mc-field-group">
