--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
 
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.css?v=2">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
