--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,7 @@
                 </ul>
                 <ul id="user-menu" class="menu">
                     <li>
-                        <a href="http://demo.demeter.vn/#/login">Đăng nhập</a>
+                        <a href="http://localhost:8081/">Đăng nhập</a>
                     </li>
                     <li>
                         <a href="#" class="btn register-action">Đăng ký</a>
