stab ver upload

--- a/html/index.html
+++ b/html/index.html
@@ -217,23 +217,18 @@
                     <div class="left">
                         <ul class="socials">
                             <li>
-                                <a href="mailto:demeter.vn@gmail.com">
-                                    <span class="icon-holder"><i class="footer-icon icon-mail"></i></span>demeter.vn@gmail.com
+                                <a href="mailto:info@demeter.vn">
+                                    <span class="icon-holder"><i class="footer-icon icon-mail"></i></span>info@demeter.vn
                                 </a>
                             </li>
                             <li>
                                 <a href="tel://+8490987007637">
-                                    <span class="icon-holder"><i class="footer-icon icon-phone"></i></span>0987 007 637
+                                    <span class="icon-holder"><i class="footer-icon icon-phone"></i></span>(+84)165 523 6473
                                 </a>
                             </li>
                             <li>
                                 <a href="https://facebook.com/demeter.vn">
                                     <span class="icon-holder"><i class="footer-icon icon-facebook"></i></span> fb.com/demeter.vn
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://instagram.com/demeter.vn">
-                                    <span class="icon-holder"><i class="footer-icon icon-instagram"></i></span> instagram.com/demeter.vn
                                 </a>
                             </li>
                         </ul>
