--- a/html/gioi-thieu.html
+++ b/html/gioi-thieu.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Demeter - Giải pháp toàn diện cho nông nghiệp Việt Nam</title>
+        <title>Demeter - Solution for Vietnam Agriculture</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 
@@ -54,24 +54,24 @@
                 </a>
                 <ul id="main-menu" class="menu">
                     <li>
-                        <a class="" href="/">Trang chủ</a>
+                        <a class="active" href="/">HOME</a>
                     </li>
                     <li>
-                        <a class="" href="ung-dung.html">Ứng dụng</a>
+                        <a class="" href="ung-dung.html">Product</a>
                     </li>
                     <!-- <li>
                         <a href="#">Thiết bị</a>
                     </li> -->
                     <li>
-                        <a class="active" href="gioi-thieu.html">Giới thiệu</a>
+                        <a class="" href="gioi-thieu.html">About</a>
                     </li>
                 </ul>
                 <ul id="user-menu" class="menu">
                     <li>
-                        <a href="http://demo.demeter.vn/#/login">Đăng nhập</a>
+                        <a href="http://console.demeter.vn/">Sign in</a>
                     </li>
                     <li>
-                        <a href="#" class="btn register-action">Đăng ký</a>
+                        <a href="#" class="btn register-action">Register</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
 
         <div id="main-screen" class="cover">
             <div class="container">
-                <h1><b>Demeter</b> - chúng tôi là ai?</h1>
+                <h1><b>Demeter</b> - Who are we?</h1>
             </div>
         </div>
 
@@ -98,8 +98,8 @@
                     </ul>
 
                     <div class="contact">
-                        <h5>Liên hệ</h5>
-                        <p><span class="icon-holder"><i class="footer-icon icon-phone"></i></span><a href="tel://+84987007637">0987 007 637</a></p>
+                        <h5>Contact</h5>
+                        <p><span class="icon-holder"><i class="footer-icon icon-phone"></i></span><a href="tel://+841655236473">(+84) 165 523 6473</a></p>
                         <p><span class="icon-holder"><i class="footer-icon icon-mail"></i></span><a href="mailto:info@demeter.vn">info@demeter.vn</a></p>
                         <p><span class="icon-holder"><i class="footer-icon icon-facebook"></i></span><a href="https://www.facebook.com/demeter.vn" target="__blank">fb.com/demeter.vn</a></p>
                         <p></p>
@@ -116,12 +116,12 @@
                         <ul class="socials">
                             <li>
                                 <a href="mailto:demeter.vn@gmail.com">
-                                    <span class="icon-holder"><i class="footer-icon icon-mail"></i></span>demeter.vn@gmail.com
+                                    <span class="icon-holder"><i class="footer-icon icon-mail"></i></span>info@demeter.vn
                                 </a>
                             </li>
                             <li>
                                 <a href="tel://+8490987007637">
-                                    <span class="icon-holder"><i class="footer-icon icon-phone"></i></span>0987 007 637
+                                    <span class="icon-holder"><i class="footer-icon icon-phone"></i></span>(+84) 165 523 6473
                                 </a>
                             </li>
                             <li>
@@ -138,11 +138,11 @@
                     </div>
                     <div class="right">
                         <div class="newsletter">
-                            <p>Cập nhật tin tức từ Demeter</p>
+                            <p>Subcribe Demeter</p>
                             <form action="https://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_77e84717877d59d08043546ff_91476e9b05" tabindex="-1" value=""></div>
                                 <div class="input">
-                                    <input type="text" name="EMAIL" placeholder="Nhập địa chỉ email của bạn..">
+                                    <input type="text" name="EMAIL" placeholder="Your email address">
                                     <div class="send">
                                         <i class="footer-icon icon-send"></i>
                                     </div>
@@ -170,9 +170,9 @@
                 <div id="mc_embed_signup">
                 <form action="https://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
-                    <h2>Đăng ký dùng thử Demeter!</h2>
+                    <h2>Demeter Free Trial Register!</h2>
                 <div class="mc-field-group">
-                    <label for="mce-EMAIL">Bạn phải điền email để tiếp tục</label>
+                    <label for="mce-EMAIL">Please input your email to continue</label>
                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required placeholder="Email của bạn">
                 </div>
                     <div id="mce-responses" class="clear">
@@ -181,8 +181,8 @@
                     </div>
                     <div style="position: absolute; left: -5000px;"><input type="text" name="b_77e84717877d59d08043546ff_91476e9b05" tabindex="-1" value=""></div>
                     <div class="clear">
-                        <input type="submit" value="Đăng ký" name="subscribe" id="mc-embedded-subscribe" class="button btn medium">
-                        <input type="button" name="" value="Đóng" class="btn cancel medium">
+                        <input type="submit" value="Register" name="subscribe" id="mc-embedded-subscribe" class="button btn medium">
+                        <input type="button" name="" value="Close" class="btn cancel medium">
                     </div>
                     </div>
                 </form>
