--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Demeter - Giải pháp toàn diện cho nông nghiệp Việt Nam</title>
+        <title>Demeter - Solution for Vietnam Agriculture</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 
@@ -54,24 +54,24 @@
                 </a>
                 <ul id="main-menu" class="menu">
                     <li>
-                        <a class="active" href="/">Trang chủ</a>
+                        <a class="active" href="/">HOME</a>
                     </li>
                     <li>
-                        <a class="" href="ung-dung.html">Ứng dụng</a>
+                        <a class="" href="ung-dung.html">Product</a>
                     </li>
                     <!-- <li>
                         <a href="#">Thiết bị</a>
                     </li> -->
                     <li>
-                        <a class="" href="gioi-thieu.html">Giới thiệu</a>
+                        <a class="" href="gioi-thieu.html">About</a>
                     </li>
                 </ul>
                 <ul id="user-menu" class="menu">
                     <li>
-                        <a href="http://console.demeter.vn/">Đăng nhập</a>
+                        <a href="http://console.demeter.vn/">Sign in</a>
                     </li>
                     <li>
-                        <a href="#" class="btn register-action">Đăng ký</a>
+                        <a href="#" class="btn register-action">Register</a>
                     </li>
                 </ul>
             </div>
@@ -82,8 +82,8 @@
         <div id="main-screen">
             <div class="container">
                 <div class="logo"></div>
-                <h1>Giải pháp toàn diện cho <b>nông nghiệp</b> Việt Nam</h1>
-                <a href="#" class="register btn">Đăng ký dùng thử</a>
+                <h1>Solution for Agriculture</h1>
+                <a href="#" class="register btn">Register</a>
             </div>
         </div>
 
@@ -92,7 +92,7 @@
                 <div class="desc left">
                     <div class="content">
                         <div class="hexagon">1</div>
-                        <h2>Giám sát</h2>
+                        <h2>Track</h2>
                         <p>Dữ liệu thu thập qua hệ thống cảm biến hiện đại. Người dùng có thể giám sát tại bất kỳ đâu thông qua ứng dụng web, smartphone.</p>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                 <div class="desc right">
                     <div class="content">
                         <div class="hexagon">2</div>
-                        <h2>Phân tích</h2>
+                        <h2>Analyze</h2>
                         <p>Dữ liệu được phân tích để đưa ra những cảnh báo kip thời giúp người dùng canh tác hiệu quả, tối ưu.</p>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="desc left">
                     <div class="content">
                         <div class="hexagon">3</div>
-                        <h2>Điều khiển</h2>
+                        <h2>Control</h2>
                         <p>Hệ thống điều khiển tự động giúp người dùng tiết kiệm chi phí và tăng năng suất, chất lượng nông sản.</p>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                 <div class="desc right">
                     <div class="content">
                         <div class="hexagon">4</div>
-                        <h2>Chia sẻ</h2>
+                        <h2>Share</h2>
                         <p>Kết nối, chia sẻ thông tin thông tin hiệu quả giữa nhà nông, nhà nghiên cứu, các chuỗi cung ứng vật tư nông nghiệp, doanh nghiệp và người dùng, từ đó giải quyết các bài toán nuôi trồng và kinh doanh thông suốt và hiệu quả.</p>
                     </div>
                 </div>
@@ -205,8 +205,8 @@
 
         <div class="block white action">
             <div class="container">
-                <h2>trải nghiệm <b>demeter</b> ngay bây giờ!</h2>
-                <a href="#" class="register btn">Đăng ký dùng thử</a>
+                <h2>Try <b>demeter</b> now!</h2>
+                <a href="#" class="register btn">Register</a>
             </div>
         </div>
 
@@ -222,7 +222,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="tel://+8490987007637">
+                                <a href="tel://+841655236473">
                                     <span class="icon-holder"><i class="footer-icon icon-phone"></i></span>(+84)165 523 6473
                                 </a>
                             </li>
@@ -235,11 +235,11 @@
                     </div>
                     <div class="right">
                         <div class="newsletter">
-                            <p>Cập nhật tin tức từ Demeter</p>
+                            <p>Subcribe Demeter</p>
                             <form action="https://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_77e84717877d59d08043546ff_91476e9b05" tabindex="-1" value=""></div>
                                 <div class="input">
-                                    <input type="text" name="EMAIL" placeholder="Nhập địa chỉ email của bạn..">
+                                    <input type="text" name="EMAIL" placeholder="Please input your email">
                                     <div class="send">
                                         <i class="footer-icon icon-send"></i>
                                     </div>
@@ -267,9 +267,9 @@
                 <div id="mc_embed_signup">
                 <form action="https://demeter.us11.list-manage.com/subscribe/post?u=77e84717877d59d08043546ff&amp;id=91476e9b05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
-                    <h2>Đăng ký dùng thử Demeter!</h2>
+                    <h2>Trial Register!</h2>
                 <div class="mc-field-group">
-                    <label for="mce-EMAIL">Bạn phải điền email để tiếp tục</label>
+                    <label for="mce-EMAIL">Please input your email</label>
                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required placeholder="Email của bạn">
                 </div>
                     <div id="mce-responses" class="clear">
