--- a/html/ung-dung.html
+++ b/html/ung-dung.html
@@ -54,24 +54,24 @@
                 </a>
                 <ul id="main-menu" class="menu">
                     <li>
-                        <a class="" href="/">Trang chủ</a>
+                        <a class="active" href="/">HOME</a>
                     </li>
                     <li>
-                        <a class="active" href="ung-dung.html">Ứng dụng</a>
+                        <a class="" href="ung-dung.html">Product</a>
                     </li>
                     <!-- <li>
                         <a href="#">Thiết bị</a>
                     </li> -->
                     <li>
-                        <a class="" href="gioi-thieu.html">Giới thiệu</a>
+                        <a class="" href="gioi-thieu.html">About</a>
                     </li>
                 </ul>
                 <ul id="user-menu" class="menu">
                     <li>
-                        <a href="http://demo.demeter.vn/#/login">Đăng nhập</a>
+                        <a href="http://console.demeter.vn/">Sign in</a>
                     </li>
                     <li>
-                        <a href="#" class="btn register-action">Đăng ký</a>
+                        <a href="#" class="btn register-action">Register</a>
                     </li>
                 </ul>
             </div>
