--- a/services/app/index.html
+++ b/services/app/index.html
@@ -42,7 +42,7 @@
                         <span class="logo"></span>
                     </a>
                     <a href="#/projects" class="ui active teal item">
-                        Danh sách dự án
+                        Project list
                         <!-- <i class="dropdown icon"></i> -->
                     </a>
                     <div class="ui right dropdown item">
